--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.7.0",
+    "mongoose-paginate-v2": "^1.7.1",
+    "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
